--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ title: David (Cougar Dave) Lewis Papers
 tagline: Photographs, correspondence, interviews, and scrapbook materials related to "Cougar Dave" and Taylor Ranch. 
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "This collection includes photographs and documents related to Dave (Cougar Dave) Lewis and the purchase of Taylor Ranch. Also included are interviews with Jess and Dorothy Taylor, who purchased Cougar Dave's ranch, as well as correspondence and documents regarding the University of Idaho's purchase of the property from the Taylor's."
+description: "This collection includes photographs and documents related to Dave (Cougar Dave) Lewis and the purchase of Taylor Ranch. Also included are interviews with Jess and Dorothy Taylor, who purchased Cougar Dave's ranch, and documents regarding the University of Idaho's purchase of the property from the Taylors."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
 keywords: idaho;history;inland northwest
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
