--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ baseurl: /digital/pses
 source-code: https://github.com/uidaholib/base-digital-collections-template
 
 # url to the shared assets folder on mainweb
-digital-assets: https://www.lib.uidaho.edu/digital/pses
+digital-assets: https://www.lib.uidaho.edu/assets
 
 ##########
 # SITE SETTINGS
@@ -28,7 +28,7 @@ tagline: Digital Collection Magic with Static Web Technologies
 # this description might appear in search result lists, keep around 160 characters max
 description: "CollectionBuilder-CSV is a template for creating digital collection exhibits using static web technology."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho; history; bugs; insects
+keywords: idaho; history; 
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: Kate Morrison
 
