--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: Maps and blueprints from the Washington, Idaho & Montana Railway Record
 # this description might appear in search result lists, keep around 160 characters max
 description: A digital collection of maps and blueprints from MG 139, Washington, Idaho & Montana (WI&M) Railway Records, 1903-1962. The items include diagrams of proposed housing plans and maps of the railway line.
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho; history; inland northwest
+keywords: Idaho railroad history; inland northwest
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
