--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: Rare Idaho Photographs from Archives around the Country
 # this description might appear in search result lists, keep around 160 characters max
 description: "Collected by Dennis Baird over several years and many trips to government archives and described by Idaho native Jordan Wrigley, the Archival Idaho Photograph Collection features some of the earliest extant photographs of Idaho, as well as countless other historical gems related to our fine state." 
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho; history; inland northwest
+keywords: idaho; history; photographs
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
