--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: A collection of maps, images, and documents pertinent to the history of
 # this description might appear in search result lists, keep around 160 characters max
 description: "The CCC in Idaho Digital Project invites engagement and interpretation of the history and legacy of the CCC in the rural West through a focus on its impact on the land, participants, and communities in Idaho. The site encourages participation through access to thousands of digitized photographs, oral histories, articles, maps, and documents donated to the project. Use of this collection is further enhanced by guides, digital tools, and interactive features." 
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho; history; inland northwest
+keywords: idaho; history; civilian conservation corps; new deal
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
