--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: From Aberdeen to Yellow Dog - Historical Photos of 134 Cities and Towns
 # this description might appear in search result lists, keep around 160 characters max
 description: "A digital collection comprised of historical photographs of over 130 Idaho Cities and Towns, spanning the years 1862 to 2000."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho; history; inland northwest
+keywords: idaho; history; photography
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
