--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: Blueprints and correspondence from the Craig Mountain Lumber Company an
 # this description might appear in search result lists, keep around 160 characters max
 description: "This collection contains blueprints and correspondence from the Craig Mountain Lumber Company and Sawmill in Winchester, Lewis County, Idaho. The correspondence in this collection mostly documents the process of reopening of the mill in 1923 after demand for lumber declined a few years prior." 
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho; history; inland northwest
+keywords: idaho; history; blueprints
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: kxuidaho
 
