--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: 50+ years' worth of Vandal Football Game Day Program Covers, 1908 - 196
 # this description might appear in search result lists, keep around 160 characters max
 description: "The Idaho Vandals Football Program Covers Collection consists of over 50 years of game day program covers (1908-1967) produced for University of Idaho football contests that took place all over the country." 
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: Football; University of Idaho Athletics
+keywords: Football; University of Idaho; Athletics; Illustration
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
