--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: Regional Maps from 1863 - 1986
 # this description might appear in search result lists, keep around 160 characters max
 description: "A digital collection comprised of 9 historical maps depicting various areas in Idaho and the Pacific Northwest between the years 1863 and 1986."  
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho; history; inland northwest
+keywords: idaho; maps; cartography; Geographic Information System; GIS
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
