--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: Photographs of Idaho, the PNW, and broader U.S. between 1920s-1960s
 # this description might appear in search result lists, keep around 160 characters max
 description: "The Kyle Laughlin Photograph Collection contains over 800 historical photographs collected or taken by Kyle Laughlin and donated to the Library in 1985. The images span the years 1931 to 1979 and depict Idaho scenery and historical sites, as well as images of Laughlin's travels, family and friends."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: historic photography; idaho
+keywords: historic photography; idaho; group photos; portraits
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
