--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: Photographs of Bovill between 1904 - 2000 from the collection of the La
 # this description might appear in search result lists, keep around 160 characters max
 description: "Photographs of Bovill, Idaho from the collection of the Latah County Historical Society."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho; history; inland northwest
+keywords: idaho; history; celebrations; group photography; forests; education
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
