--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: Historic Mining Films from Idaho's Silver Valley Mining District
 # this description might appear in search result lists, keep around 160 characters max
 description: "A collection of historic mining films from Idaho's Silver Valley Mining District and elsewhere, originally filmed by Harry Webb Marsh."  
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho; history; inland northwest
+keywords: idaho; history; mining; smelting; industrial architecture
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
