--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: Depicting life in and around Potlatch, Idaho from 1880 to 2024
 # this description might appear in search result lists, keep around 160 characters max
 description: "A digital collection comprised of about 3,500 photographs and documents from Potlatch and surrounding areas."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: Potlatch Idaho; local history; inland northwest
+keywords: Potlatch; Idaho; local history; architecture; horses; group photographs; lumber; portraits; railroads
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
