--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: A collection of over 1500 photographs from the Potlatch Lumber Company
 # this description might appear in search result lists, keep around 160 characters max
 description: "A collection of over 1500 photographs from the Potlatch Lumber Company depicting working conditions, workers, logging and mill operations, and other related subject matter."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho; history; inland northwest
+keywords: idaho; history; lumber; timber; forestry
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
