--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: Digitized Historical Postcards from Idaho and the Greater Northwest
 # this description might appear in search result lists, keep around 160 characters max
 description: "A digital collection of over 800 historical Northwest postcards from the historical photograph collections of the University of Idaho Library's Special Collections & Archives. The postcards range in date from the 1890s to the 1980s."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho; history; inland northwest
+keywords: idaho; history; postcards; ephemera; tourism
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
