--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: Photographs taken by University of Idaho student Franklin Raney
 # this description might appear in search result lists, keep around 160 characters max
 description: "Photograph subjects include the University of Idaho campus, employees and students, and forested areas on Moscow Mountain and the Coeur d'Alene National Forest."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho; university of idaho; forestry
+keywords: idaho; university of idaho; forestry; photography; education
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: amyjoui
 
