--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: Materials used in the writing of The Camas Prairie - Idaho's Railroad o
 # this description might appear in search result lists, keep around 160 characters max
 description: "A digital collection comprised of photographs, documents, interviews, and other materials gathered by Hal Riegger between 1981 and 1986. Riegger used these materials to write a book called The Camas Prairie: Idaho's Railroad on Stilts."  
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho; history; inland northwest
+keywords: idaho; history; railroads; trains; railway; correspondence; maps; cartography
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
