--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: Historic fire insurance maps of Idaho created by the Sanborn Map Compan
 # this description might appear in search result lists, keep around 160 characters max
 description: The Idaho Sanborn Maps digital collection consists of fire insurance maps created by the Sanborn Map Company. This collection of maps covers 42 counties and 81 cities in Idaho, from the 1880s to 1920s.
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho maps; history
+keywords: idaho; maps; history; cartography; insurance; fire; public safety
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
